force-app/main/default/objects/RelistingContext__c/RelistingContext__c.object-meta.xml
<CustomObject>
    <description>Context for Relisting logic</description>
    <label>Contexto da Relistagem</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Nome de Contexto de Relistagem</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contexto da Relistagem</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>