force-app/main/default/objects/RelistingContext__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Contexto da Relistagem</relationshipLabel>
    <relationshipName>Contexto_da_Relistagem</relationshipName>
    <type>Lookup</type>
</CustomField>