force-app/main/default/objects/RelistingContext__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>55</length>
    <type>Text</type>
</CustomField>