force-app/main/default/objects/RelistingContext__c/fields/HouseId__c.field-meta.xml
<CustomField>
    <fullName>HouseId__c</fullName>
    <label>QuintoAndar House Id</label>
    <length>55</length>
    <type>Text</type>
</CustomField>