force-app/main/default/objects/RelistingContext__c/fields/IsEarlyRelistingActive__c.field-meta.xml
<CustomField>
    <fullName>IsEarlyRelistingActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Early Relisting Ativo</label>
    <type>Checkbox</type>
</CustomField>