force-app/main/default/objects/RelistingContext__c/fields/IsRelistingEligible__c.field-meta.xml
<CustomField>
    <fullName>IsRelistingEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Elegível para Relisting</label>
    <type>Checkbox</type>
</CustomField>