force-app/main/default/objects/RelistingContext__c/fields/ListingStatus__c.field-meta.xml
<CustomField>
    <fullName>ListingStatus__c</fullName>
    <label>Status do Listing (LBC)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SUSPENDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>