force-app/main/default/objects/RelistingContext__c/fields/Termination__c.field-meta.xml
<CustomField>
    <fullName>Termination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rescisão</label>
    <referenceTo>Termination__c</referenceTo>
    <relationshipLabel>Contexto da Relistagem</relationshipLabel>
    <relationshipName>Contexto_da_Relistagem</relationshipName>
    <type>Lookup</type>
</CustomField>